[package]
name = "gitstatus"
version = "1.0.0"
edition = "2021"
description = "Does one thing incredibly well: tells you your current branch, origin branch and the number of changes. Perfect for large repositories / monorepos"
license = "GPL-3.0-only"
repository = "https://github.com/stephenyu/gitstatus"
rust-version = "1.89.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gix = { version = "0.73.0", features = ["status", "parallel"] }
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
debug = false
rpath = false
